# OwOS

./: Cargo.toml  README.md  build.sh  build_2.sh  build_release.sh  run.sh  run_release.sh  rust-toolchain.toml  sdcard.img
.cargo/: config.toml
src/: allocator.rs  interrupts.rs  lib.rs  main.rs  memory.rs  vec.rs  vga_buffer.rs
src/allocator/: bump.rs
src/kernel/: allocator.rs  gdt.rs  interrupts.rs  kernel.rs  memory.rs  mod.rs  serial.rs  vga_buffer.rs
src/kernel/temp/: raw_vec.rs  string.rs  vec.rs
src/os/: colorlib.rs  display.rs  input.rs  mod.rs
