[package]
name = "owos"
version = "0.2.3"
edition = "2024"

[dependencies]
linked_list_allocator = "0.10.5"
log = "0.4.27"
pc-keyboard = "0.8.0"
spin = "0.10.0"
time = { version = "0.3.41", default-features = false }
uart_16550 = "0.3.2"
uefi = "0.35.0"
uefi-services = "0.25.0"
volatile = "0.2.6"

[dependencies.lazy_static]
version = "1.5"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]

[target.'cfg(target_os = "none")']
runner = "bootimage runner"

[target."x86_64-owos".dependencies]
x86_64 = "0.15.2"
pic8259 = "0.11.0"

