[package]
name = "OwOS"
version = "0.4.2"
edition = "2024"

[dependencies]
embedded-graphics = "0.8.1"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
linked_list_allocator = "0.10.5"
log = "0.4"
pc-keyboard = "0.8.0"
pic8259 = "0.11.0"
spin = "0.10.0"
uefi = "0.35.0"
uefi-graphics2 = "0.5.0"
uefi-raw = "0.11.0"
x86_64 = "0.15.2"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

